1999-04-11  Tanaka Akira  <akr@jaist.ac.jp>

	* mcs-e20.el (x-ctext): Define coding system `x-ctext' if `ctext'
	is not proper for decoding `iso-2022-jp-2'.

1999-04-09  Tanaka Akira  <akr@jaist.ac.jp>

	* static.el: Add doc-strings.

1999-04-09  Tanaka Akira  <akr@jaist.ac.jp>

	* EMU-ELS (emu-modules): Add `static'.

	* static.el: New file.

	* broken.el: New implementation using `static'.

1999-04-09  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* EMU-ELS (poem-modules): Add `poem-xfc' if file-coding feature is
	available in a XEmacs-without-MULE.

1999-04-09  Andy Piper        <andy@xemacs.org>

	* poem.el: use poem-xfc when we have XEmacs with file coding.

	* poem-xfc.el: new file for file coding based XEmacs.


1999-04-08  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* APEL: Version 9.16 released.

1999-04-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* install.el (install-prefix): Check whether
	`system-configuration-options' is defined or not before using it.

	* poe-18.el (add-hook, remove-hook): Moved to poe.el.
	* poe.el (add-hook, remove-hook): Accept optional `local' arg.
	(add-local-hook, remove-local-hook): Removed.

	* tinycustom.el (defface): Make face if 'faces is provided.

1999-03-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* pcustom.el: New implementation using broken.el.

1999-03-14  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-MK (compile-apel, what-where-apel): Use `load-file' to
	ensure that EMU_ELS in the current directory is loaded.

1999-03-11  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* emu.el (code-convert-string, code-convert-region,
	insert-binary-file-contents): Doc fix.

1999-03-16  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* README.en, README.ja: Add description of pcustom and tinycustom.

1999-03-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* tinycustom.el: Delete RCS keywords.

1999-03-24  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* poe.el (make-local-hook): Move to after defining `add-local-hook'