@@ -157,12 +157,13 @@ Return nil if corresponding MIME-charset is not found."
 
 (static-when (string= (decode-coding-string "\e.A\eN!" 'ctext) "\eN!")
   (make-coding-system
-   'x-ctext 2 ?f
-   "ISO 2022 based generic encoding for decoding unknown messages."
+   'x-ctext 2 ?x
+   "Compound text based generic encoding for decoding unknown messages."
    '((ascii t) (latin-iso8859-1 t) t t
-     shoft ascii-eol ascii-cntl seven locking-shift single-shift nil nil nil
+     nil ascii-eol ascii-cntl nil locking-shift single-shift nil nil nil
      init-bol nil nil)
-   '((safe-charsets . t))))
+   '((safe-charsets . t)
+     (mime-charset . x-ctext))))
 
 
 ;;; @ end
